assignment01/parser.output
Terminals unused in grammar

    OSB
    CSB


Grammar

    0 $accept: program $end

    1 program: expressions

    2 expressions: expression expressions
    3            | ε

    4 expression: section
    5           | subsection
    6           | subsubsection
    7           | italic
    8           | bold
    9           | href
   10           | hrule
   11           | paragraph
   12           | information
   13           | endLine

   14 section: SECTION OB DATA CB

   15 subsection: SUBSECTION OB DATA CB

   16 subsubsection: SUBSUBSECTION OB DATA CB

   17 italic: ITALIC OB DATA CB

   18 bold: BOLD OB DATA CB

   19 href: HREF OB LINK CB OB DATA CB

   20 hrule: HRULE

   21 paragraph: PAR

   22 information: DATA

   23 endLine: EOL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SECTION (258) 14
    SUBSECTION (259) 15
    SUBSUBSECTION (260) 16
    OB (261) 14 15 16 17 18 19
    CB (262) 14 15 16 17 18 19
    OSB (263)
    CSB (264)
    BOLD (265) 18
    ITALIC (266) 17
    EOL (267) 23
    HRULE (268) 20
    PAR (269) 21
    HREF (270) 19
    DATA <data> (271) 14 15 16 17 18 19 22
    LINK <data> (272) 19


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    program <node> (19)
        on left: 1
        on right: 0
    expressions <node> (20)
        on left: 2 3
        on right: 1 2
    expression <node> (21)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2
    section <node> (22)
        on left: 14
        on right: 4
    subsection <node> (23)
        on left: 15
        on right: 5
    subsubsection <node> (24)
        on left: 16
        on right: 6
    italic <node> (25)
        on left: 17
        on right: 7
    bold <node> (26)
        on left: 18
        on right: 8
    href <node> (27)
        on left: 19
        on right: 9
    hrule <node> (28)
        on left: 20
        on right: 10
    paragraph <node> (29)
        on left: 21
        on right: 11
    information <node> (30)
        on left: 22
        on right: 12
    endLine <node> (31)
        on left: 23
        on right: 13


State 0

    0 $accept: • program $end

    SECTION        shift, and go to state 1
    SUBSECTION     shift, and go to state 2
    SUBSUBSECTION  shift, and go to state 3
    BOLD           shift, and go to state 4
    ITALIC         shift, and go to state 5
    EOL            shift, and go to state 6
    HRULE          shift, and go to state 7
    PAR            shift, and go to state 8
    HREF           shift, and go to state 9
    DATA           shift, and go to state 10

    $default  reduce using rule 3 (expressions)

    program        go to state 11
    expressions    go to state 12
    expression     go to state 13
    section        go to state 14
    subsection     go to state 15
    subsubsection  go to state 16
    italic         go to state 17
    bold           go to state 18
    href           go to state 19
    hrule          go to state 20
    paragraph      go to state 21
    information    go to state 22
    endLine        go to state 23


State 1

   14 section: SECTION • OB DATA CB

    OB  shift, and go to state 24


State 2

   15 subsection: SUBSECTION • OB DATA CB

    OB  shift, and go to state 25


State 3

   16 subsubsection: SUBSUBSECTION • OB DATA CB

    OB  shift, and go to state 26


State 4

   18 bold: BOLD • OB DATA CB

    OB  shift, and go to state 27


State 5

   17 italic: ITALIC • OB DATA CB

    OB  shift, and go to state 28


State 6

   23 endLine: EOL •

    $default  reduce using rule 23 (endLine)


State 7

   20 hrule: HRULE •

    $default  reduce using rule 20 (hrule)


State 8

   21 paragraph: PAR •

    $default  reduce using rule 21 (paragraph)


State 9

   19 href: HREF • OB LINK CB OB DATA CB

    OB  shift, and go to state 29


State 10

   22 information: DATA •

    $default  reduce using rule 22 (information)


State 11

    0 $accept: program • $end

    $end  shift, and go to state 30


State 12

    1 program: expressions •

    $default  reduce using rule 1 (program)


State 13

    2 expressions: expression • expressions

    SECTION        shift, and go to state 1
    SUBSECTION     shift, and go to state 2
    SUBSUBSECTION  shift, and go to state 3
    BOLD           shift, and go to state 4
    ITALIC         shift, and go to state 5
    EOL            shift, and go to state 6
    HRULE          shift, and go to state 7
    PAR            shift, and go to state 8
    HREF           shift, and go to state 9
    DATA           shift, and go to state 10

    $default  reduce using rule 3 (expressions)

    expressions    go to state 31
    expression     go to state 13
    section        go to state 14
    subsection     go to state 15
    subsubsection  go to state 16
    italic         go to state 17
    bold           go to state 18
    href           go to state 19
    hrule          go to state 20
    paragraph      go to state 21
    information    go to state 22
    endLine        go to state 23


State 14

    4 expression: section •

    $default  reduce using rule 4 (expression)


State 15

    5 expression: subsection •

    $default  reduce using rule 5 (expression)


State 16

    6 expression: subsubsection •

    $default  reduce using rule 6 (expression)


State 17

    7 expression: italic •

    $default  reduce using rule 7 (expression)


State 18

    8 expression: bold •

    $default  reduce using rule 8 (expression)


State 19

    9 expression: href •

    $default  reduce using rule 9 (expression)


State 20

   10 expression: hrule •

    $default  reduce using rule 10 (expression)


State 21

   11 expression: paragraph •

    $default  reduce using rule 11 (expression)


State 22

   12 expression: information •

    $default  reduce using rule 12 (expression)


State 23

   13 expression: endLine •

    $default  reduce using rule 13 (expression)


State 24

   14 section: SECTION OB • DATA CB

    DATA  shift, and go to state 32


State 25

   15 subsection: SUBSECTION OB • DATA CB

    DATA  shift, and go to state 33


State 26

   16 subsubsection: SUBSUBSECTION OB • DATA CB

    DATA  shift, and go to state 34


State 27

   18 bold: BOLD OB • DATA CB

    DATA  shift, and go to state 35


State 28

   17 italic: ITALIC OB • DATA CB

    DATA  shift, and go to state 36


State 29

   19 href: HREF OB • LINK CB OB DATA CB

    LINK  shift, and go to state 37


State 30

    0 $accept: program $end •

    $default  accept


State 31

    2 expressions: expression expressions •

    $default  reduce using rule 2 (expressions)


State 32

   14 section: SECTION OB DATA • CB

    CB  shift, and go to state 38


State 33

   15 subsection: SUBSECTION OB DATA • CB

    CB  shift, and go to state 39


State 34

   16 subsubsection: SUBSUBSECTION OB DATA • CB

    CB  shift, and go to state 40


State 35

   18 bold: BOLD OB DATA • CB

    CB  shift, and go to state 41


State 36

   17 italic: ITALIC OB DATA • CB

    CB  shift, and go to state 42


State 37

   19 href: HREF OB LINK • CB OB DATA CB

    CB  shift, and go to state 43


State 38

   14 section: SECTION OB DATA CB •

    $default  reduce using rule 14 (section)


State 39

   15 subsection: SUBSECTION OB DATA CB •

    $default  reduce using rule 15 (subsection)


State 40

   16 subsubsection: SUBSUBSECTION OB DATA CB •

    $default  reduce using rule 16 (subsubsection)


State 41

   18 bold: BOLD OB DATA CB •

    $default  reduce using rule 18 (bold)


State 42

   17 italic: ITALIC OB DATA CB •

    $default  reduce using rule 17 (italic)


State 43

   19 href: HREF OB LINK CB • OB DATA CB

    OB  shift, and go to state 44


State 44

   19 href: HREF OB LINK CB OB • DATA CB

    DATA  shift, and go to state 45


State 45

   19 href: HREF OB LINK CB OB DATA • CB

    CB  shift, and go to state 46


State 46

   19 href: HREF OB LINK CB OB DATA CB •

    $default  reduce using rule 19 (href)
